# terminal-session-recorder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  GITHUB_PUBLISH_GUIDE.md  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING_CHECKLIST.md  config.example.yaml  config_manager.py  main.py  minimal_scanner.py  pyproject.toml  requirements.txt  session_logger.py  setup.py  setup_linux.sh  setup_windows.bat
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: FEATURES.md
tests/: test_basic.py
tsr/: __init__.py  cli.py  replay.py  server.py
tsr/core/: classifier.py  config.py  database.py  recorder.py
tsr/exporters/: csv_export.py  html.py  json_export.py  pdf.py
tsr/monitors/: network.py  resources.py  screenshots.py  syscalls.py
tsr/plugins/: base.py  metasploit.py  nmap.py
tsr/templates/: dashboard.html
tsr/utils/: crypto.py  formatters.py  validators.py
